--- a/web/src/components/LoginBox/styles.module.scss
+++ b/web/src/components/LoginBox/styles.module.scss
@@ -1,3 +1,5 @@
+$medium: 768px;
+
 .loginBoxWrapper {
   height: 100vh;
   width: 100%;
@@ -5,7 +7,7 @@
 
   padding: 440px 80px 0;
   text-align: center;
-  
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,7 +21,7 @@
   .signInWithGithub {
     background: #ffcd1e;
     margin-top: 32px;
-    padding: 0 40px;
+    padding: 20px 40px;
     height: 56px;
     color: #09090a;
     font-size: 14px;
@@ -38,5 +40,8 @@
     &:hover {
       filter: brightness(0.9);
     }
+  }
+  @media screen and (max-width: $medium) {
+    padding-bottom: 50px;
   }
 }
